--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
                         <i class="devicons devicons-jquery" title="jQuery"></i>
                     </li>
                     <li class="list-inline-item">
+                        <i class="devicons devicons-axios" title="axios"></i>
+                    </li>
+                    <li class="list-inline-item">
                         <i class="devicons devicons-react" title="React JS"></i>
                     </li>
                     <li class="list-inline-item">
