--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
+    <!-- Bootstrap Lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/ekko-lightbox.5.3.min.css">
+
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
         rel="stylesheet" />
@@ -334,7 +338,29 @@
 
                 <div class="row text-center">
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/SIP-SC.git" class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/ARMS.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
+                            <img src="./img/portofolio/ARMS.png" alt="Archive Surat"
+                                class="img-fluid img-thumbnail">
+                        </a>
+                        <p class="text-center">Sistem Informasi Archive Surat <span class="text-primary"><a href="https://dishub.kaltimprov.go.id/"
+                                    target="__blank" class="text-decoration-none">Dinas Perhubungan Kota Samarinda</a></span>
+                        </p>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <a href="./img/portofolio/BSS-Dashboard.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
+                            <img src="./img/portofolio/BSS-Dashboard.png"
+                                alt="Dashboard" class="img-fluid img-thumbnail">
+                        </a>
+                        <p class="text-center">Dashboard <span class="text-primary"><a href="https://bss.id/"
+                            target="__blank" class="text-decoration-none">PT. Bangun Suemeru
+                            Sejahtera</a></a></span>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-12 col-lg-6">
+                        <a href="./img/portofolio/SIP-SC.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/SIP-SC.png" alt="Surat Cuti"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -343,7 +369,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/SIP-SK.git" class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/SIP-SK.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/SIP-SK.png"
                                 alt="Surat Keputusan" class="img-fluid img-thumbnail">
                         </a>
@@ -353,7 +379,7 @@
 
                 <div class="row text-center">
                     <div class="col-12 col-lg-6">
-                        <a href="https://inoffice.bss.id/" class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/InOffice-PT-BANGUN-SEMERU-SEJAHTERA.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/InOffice-PT-BANGUN-SEMERU-SEJAHTERA.png" alt="Surat Keputusan"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -363,7 +389,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <a href="https://mom.bss.id/" class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/Minutes-of-Meeting-PT-BANGUN-SEMERU-SEJAHTERA.png" class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/Minutes-of-Meeting-PT-BANGUN-SEMERU-SEJAHTERA.png"
                                 alt="Minutes of Meeting" class="img-fluid img-thumbnail">
                         </a>
@@ -375,16 +401,16 @@
 
                 <div class="row text-center">
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Rental-PS-Berbasis-Web"
-                            class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/Rental-PS.png"
+                            class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/Rental-PS.png" alt="Rental PS" class="img-fluid img-thumbnail">
                         </a>
                         <p>Sistem Informasi <span class="text-primary">Rental
                                 PS</span> berbasis Web</p>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Geografis-UMKM-Barbershop"
-                            class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/UMKM-Barbershop.png"
+                            class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/UMKM-Barbershop.png" alt="Barbershop"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -395,8 +421,8 @@
 
                 <div class="row text-center">
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Geografis-UMKM-Tailor"
-                            class="text-decoration-none" target="__blank"><img src="./img/portofolio/UMKM-Tailor.png"
+                        <a href="./img/portofolio/UMKM-Tailor.png"
+                            class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900"><img src="./img/portofolio/UMKM-Tailor.png"
                                 alt="Tailor" class="img-fluid img-thumbnail"></a>
                         <p> Sistem Informasi Geografis <span class="text-primary">Usaha Mikro
                                 Kecil
@@ -405,8 +431,8 @@
                         </p>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Geografis-UMKM-Kerajinan-Tangan"
-                            class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/UMKM-Kerajinan-Tangan.png"
+                            class="text-decoration-none" data-toggle="lightbox" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/UMKM-Kerajinan-Tangan.png" alt="Kerajinan Tangan"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -418,8 +444,8 @@
 
                 <div class="row text-center">
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Geografis-UMKM-Laundry"
-                            class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/Skripsi-SIG-UMKM-Laundry.png"
+                            class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/Skripsi-SIG-UMKM-Laundry.png" alt="Laundry"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -428,8 +454,8 @@
                             Samarinda</p>
                     </div>
                     <div class="col-12 col-lg-6">
-                        <a href="https://github.com/satriairawan05/Sistem-Informasi-Surat-Perintah-Perjalanan-Dinas"
-                            class="text-decoration-none" target="__blank">
+                        <a href="./img/portofolio/SPPD-Home-Page.png"
+                            class="text-decoration-none" target="__blank" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">
                             <img src="./img/portofolio/SPPD-Home-Page.png" alt="Sistem Informasi Perjalanan Dinas"
                                 class="img-fluid img-thumbnail">
                         </a>
@@ -517,30 +543,21 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Bootstrap Lightbox -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="js/ekko-lightboxt.5.3.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.init.js"></script>
+
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="text/javascript">
-        // Make a request for a user with a given ID
-        axios.get('https://api.github.com/users/satriairawan05')
-        .then(function (response) {
-        // handle success
-            const img = document.getElementById('img');
-            img.src = response.data.avatar_url;
-        })
-        .catch(function (error) {
-        // handle error
-        console.log(error);
-        })
-        .finally(function () {
-        // always executed
-        });
-
-    </script>
+    <!-- Axios 1.6.2 -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js" integrity="sha512-b94Z6431JyXY14iSXwgzeZurHHRNkLt9d6bAHt7BZT38eqV+GyngIi/tVye4jBKPYQ2lBdRs0glww4fmpuLRwA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="js/axios.min.js"></script>
+    <script type="text/javascript" src="js/axios.init.js"></script>
 </body>
 
 </html>
