Update New Link Data

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 
                     </div>
                     <div class="col-12 col-lg-4">
-                        <p>Next Anime <a href="https://jikanime-moe.vercel.app/" class="text-decoration-none"
+                        <p>Next Anime <a href="https://github.com/satriairawan05/Anime-List" class="text-decoration-none"
                                 target="__blank"> <span class="text-primary">List</span></a></p>
 
                     </div>
