--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
                     </div>
                     <div class="col-12 col-lg-4">
-                        <p>Shopping <a href="https://react-shopping-list-lovat.vercel.app/" class="text-decoration-none"
+                        <p>Movie DB <a href="https://react-movie-db-xi.vercel.app/" class="text-decoration-none"
                                 target="__blank"> <span class="text-primary">List</span></a></p>
 
                     </div>
