--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 		    					<span class="date">2020 - 2020</span>
 		    					<h2>Belajar Membuat Aplikasi Android untuk Pemula</h2>
 		    					<span class="position">Dicoding Academy</span>
-		    					<p>Belajar Membuat Aplikasi Android untuk Pemula by Dicoding Academ</p>
+		    					<p>Belajar Membuat Aplikasi Android untuk Pemula by Dicoding Academy</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
