--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img mb-2" id="section-counter">
+    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container-fluid px-md-5">
 				<div class="row d-md-flex align-items-center">
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
