--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 					    	<div class="text pl-3">
 		    					<span class="date">August 2015 - August 2018</span>
 		    					<h2>Multimedia</h2>
-		    					<span class="position">Samarinda 5 State Vocational High School</span>
-		    					<p>Multimedia Track</p>
+		    					<span class="position">SMK Negeri 5 Samarinda</span>
+		    					<p>Design Graphic Track</p>
 		    				</div>
 	    				</div>
 					  </div>
