--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					    	<div class="text pl-3">
 		    					<span class="date">August 2015 - August 2018</span>
 		    					<h2>Multimedia</h2>
-		    					<span class="position">SMK Negeri 5 Samarinda</span>
+		    					<span class="position">SMK NEGERI 5 SAMARINDA</span>
 		    					<p>Design Graphic Track</p>
 		    				</div>
 	    				</div>
