--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I'm Responsibility, Critical Thinking, Time Management, Team Management, Public Speaking, Leadership and Teamwork. Experience with Git version control. Knowledge of Coding Language (e.x Javascript, Typescript, PHP), Knowledge of Debbuging & Clean Code, Experience with Server Side Programming Language & MVC Framework (e.x PHP/Laravel) , Experience with Web Development (e.x Laravel, Livewire, React JS) and Web Design (e.x Bootstrap, TailwindCSS), Experience with Front End Web (e.x React JS or React TS).</p>
+		            <p class="text-justify">I'm Responsibility, Critical Thinking, Time Management, Team Management, Public Speaking, Leadership and Teamwork. Experience with Git version control. Knowledge of Coding Language (e.x Javascript, Typescript, PHP), Knowledge of Debbuging & Clean Code, Experience with Server Side Programming Language & MVC Framework (e.x PHP/Laravel) , Experience with Web Development (e.x Laravel, Livewire, React JS) and Web Design (e.x Bootstrap, TailwindCSS), Experience with Front End Web (e.x React JS or React TS).</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Deuwi Satriya Irawan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>August 05, 1999</span></li>
