--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
     			<div class="col-md-3">
 				    <nav id="navi">
 					    <ul>
-					      <li><a href="#page-1">Education</a></li>
-					      <li><a href="#page-2">Experience</a></li>
-					      <li><a href="#page-3">Skills</a></li>
-					      <li><a href="#page-4">Awards</a></li>
+					      <li><a href="#education">Education</a></li>
+					      <li><a href="#experiences">Experiences</a></li>
+					      <li><a href="#skills">Skills</a></li>
+					      <li><a href="#awards">Awards</a></li>
 					    </ul>
 					  </nav>
 					</div>
 					<div class="col-md-9">
-					  <div id="page-1" class="page one">
+					  <div id="education" class="page one">
 					  	<h2 class="heading">Education</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
@@ -148,8 +148,8 @@
 	    				</div>
 					  </div>
 
-					  <div id="page-2" class="page two">
-					  	<h2 class="heading">Experience</h2>
+					  <div id="experiences" class="page two">
+					  	<h2 class="heading">Experiences</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -209,7 +209,7 @@
 	    				</div>
 					  </div>
 
-					  <div id="page-3" class="page three">
+					  <div id="skills" class="page three">
 					  	<h2 class="heading">Skills</h2>
 					  	<div class="row progress-circle mb-5">
 					  		<div class="col-lg-4 mb-4">
@@ -408,7 +408,7 @@
 					  	</div>
 					  </div>
 
-					  <div id="page-4" class= "page four">
+					  <div id="awards" class= "page four">
 					    <h2 class="heading">Awards</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
