--- a/index.html
+++ b/index.html
@@ -410,12 +410,23 @@
 
 					  <div id="awards" class= "page four">
 					    <h2 class="heading">Awards</h2>
+						<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2023 - 2024</span>
+		    					<h2>Mahir Membuat Website dengan Laravel 9</h2>
+		    					<span class="position">Coding Studio</span>
+		    					<p>Mahir Membuat Website dengan Laravel 9</p>
+	    					</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2021 - 2022</span>
+		    					<span class="date">2023 - 2024</span>
 		    					<h2>Kelas Menulis Cerpen dan Kontribusi pada Buku Kenangan Sejuta Pena Samarinda</h2>
 		    					<span class="position">Dinas Perpustakaan dan Kearsipan Kota Samarinda</span>
 		    					<p>Berkontribusi sebagai Author pada Buku Kenangan Sejuta Pena Samarinda yang diterbitkan Dinas Perpustakaan Kota Samarinda</p>
