Add Organization, Project and fix css

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 				    <nav id="navi">
 					    <ul>
 					      <li><a href="#education">Education</a></li>
+					      <li><a href="#organizations">Organizations</a></li>
 					      <li><a href="#experiences">Experiences</a></li>
 					      <li><a href="#skills">Skills</a></li>
 					      <li><a href="#awards">Awards</a></li>
@@ -148,7 +149,59 @@
 	    				</div>
 					  </div>
 
-					  <div id="experiences" class="page two">
+					  <div id="organizations" class="page two">
+					  	<h2 class="heading">Organizations</h2>
+                        <div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">March 2021 -  September 2021</span>
+		    					<h2>Staff Kominfo</h2>
+		    					<span class="position">Himpunan Mahasiswa TRPL</span><br>
+		    					<span>Design and Compile Work Programs</span>
+		    					<span>Evaluate Performance</span>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities </span>
+		    					<span>Playing an active role in every agenda held</span>
+		    				</div>
+	    				</div>
+                        <div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">September 2019 -  Augustus 2020</span>
+		    					<h2>Head of the Department of Shiar and Ummah Services</h2>
+		    					<span class="position">Lembaga Kajian Islam Mahasiswa</span><br>
+		    					<span>Design and compile Work Programs</span>
+		    					<span>Establish Cooperation with Internal Campus and External Campus</span>
+		    					<span>Conduct Training according to Member Interests</span>
+		    					<span>Conduct periodic evaluations during the period</span>
+		    					<span>Take an active role as a Publication Coordinator at every event held</span>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities</span>
+		    					<span>Prepare a Responsibility Sheet at the end of the period</span>
+		    				</div>
+	    				</div>
+                        <div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">November 2018 - September 2019</span>
+		    					<h2>Head of Shiar Department</h2>
+		    					<span class="position">Lembaga Kajian Islam Mahasiswa</span><br>
+		    					<span>Design and compile Work Programs</span>
+		    					<span>Establish Cooperation with Internal Campus and External Campus</span>
+		    					<span>Conduct Training according to Member Interests</span>
+		    					<span>Conduct periodic evaluations during the period</span>
+		    					<span>Take an active role as a Publication Coordinator at every event held</span>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities</span>
+		    					<span>Prepare a Responsibility Sheet at the end of the period</span>
+		    				</div>
+	    				</div>
+					  </div>
+
+					  <div id="experiences" class="page three">
 					  	<h2 class="heading">Experiences</h2>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
@@ -209,7 +262,7 @@
 	    				</div>
 					  </div>
 
-					  <div id="skills" class="page three">
+					  <div id="skills" class="page four">
 					  	<h2 class="heading">Skills</h2>
 					  	<div class="row progress-circle mb-5">
 					  		<div class="col-lg-4 mb-4">
@@ -408,7 +461,7 @@
 					  	</div>
 					  </div>
 
-					  <div id="awards" class= "page four">
+					  <div id="awards" class= "page five">
 					    <h2 class="heading">Awards</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
@@ -532,6 +585,16 @@
 				<i class="devicon-laravel-plain colored"></i>
 			</p>
     		<div class="row no-gutters">
+				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portofolio/Surat-Prodi.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="./images/portofolio/Surat-Prodi.png" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">Sistem Informasi Surat Kemahasiswaan <a href="https://politanisamarinda.ac.id/" target="__blank" class="text-decoration-none">Politeknik Pertanian Negeri Samarinda</a></a></h3>
+	    					<span>Web Development</span>
+	    				</div>
+    				</div>
+    			</div>
+
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portofolio/AKG-SOP.png);">
     					<div class="overlay"></div>
