--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 		    					<span class="date">March 2021 -  September 2021</span>
 		    					<h2>Staff Kominfo</h2>
 		    					<span class="position">Himpunan Mahasiswa TRPL</span><br>
-		    					<span>Design and Compile Work Programs</span>
-		    					<span>Evaluate Performance</span>
-		    					<span>Representing Organizations and Campuses in the framework of External Activities </span>
+		    					<span>Design and Compile Work Programs</span><br>
+		    					<span>Evaluate Performance</span><br>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities </span><br>
 		    					<span>Playing an active role in every agenda held</span>
 		    				</div>
 	    				</div>
@@ -173,12 +173,12 @@
 		    					<span class="date">September 2019 -  Augustus 2020</span>
 		    					<h2>Head of the Department of Shiar and Ummah Services</h2>
 		    					<span class="position">Lembaga Kajian Islam Mahasiswa</span><br>
-		    					<span>Design and compile Work Programs</span>
-		    					<span>Establish Cooperation with Internal Campus and External Campus</span>
-		    					<span>Conduct Training according to Member Interests</span>
-		    					<span>Conduct periodic evaluations during the period</span>
-		    					<span>Take an active role as a Publication Coordinator at every event held</span>
-		    					<span>Representing Organizations and Campuses in the framework of External Activities</span>
+		    					<span>Design and compile Work Programs</span><br>
+		    					<span>Establish Cooperation with Internal Campus and External Campus</span><br>
+		    					<span>Conduct Training according to Member Interests</span><br>
+		    					<span>Conduct periodic evaluations during the period</span><br>
+		    					<span>Take an active role as a Publication Coordinator at every event held</span><br>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities</span><br>
 		    					<span>Prepare a Responsibility Sheet at the end of the period</span>
 		    				</div>
 	    				</div>
@@ -190,12 +190,12 @@
 		    					<span class="date">November 2018 - September 2019</span>
 		    					<h2>Head of Shiar Department</h2>
 		    					<span class="position">Lembaga Kajian Islam Mahasiswa</span><br>
-		    					<span>Design and compile Work Programs</span>
-		    					<span>Establish Cooperation with Internal Campus and External Campus</span>
-		    					<span>Conduct Training according to Member Interests</span>
-		    					<span>Conduct periodic evaluations during the period</span>
-		    					<span>Take an active role as a Publication Coordinator at every event held</span>
-		    					<span>Representing Organizations and Campuses in the framework of External Activities</span>
+		    					<span>Design and compile Work Programs</span><br>
+		    					<span>Establish Cooperation with Internal Campus and External Campus</span><br>
+		    					<span>Conduct Training according to Member Interests</span><br>
+		    					<span>Conduct periodic evaluations during the period</span><br>
+		    					<span>Take an active role as a Publication Coordinator at every event held</span><br>
+		    					<span>Representing Organizations and Campuses in the framework of External Activities</span><br>
 		    					<span>Prepare a Responsibility Sheet at the end of the period</span>
 		    				</div>
 	    				</div>
