--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="35">0</span>
+	                <span class="number" data-number="15">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="https://www.linkedin.com/in/satriai418/" class="btn btn-primary py-3 px-3">See My Profile</a></p>
@@ -586,6 +586,16 @@
 			</p>
     		<div class="row no-gutters">
 				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portofolio/CBP-Control-System.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="./images/portofolio/CBP-Control-System.png" data-toggle="lightbox" data-type="image" data-gallery="example-gallery" data-max-height="900">Contract-Based Project <a href="https://samaricode.my.id/" target="__blank" class="text-decoration-none">Control System</a></a></h3>
+	    					<span>Web Development</span>
+	    				</div>
+    				</div>
+    			</div>
+
+				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portofolio/Surat-Prodi.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -778,7 +788,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="35">0</strong>
+                <strong class="number" data-number="15">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
@@ -786,7 +796,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="20">0</strong>
+                <strong class="number" data-number="15">0</strong>
                 <span>Happy Customers</span>
               </div>
             </div>
