--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">June 2023 - Present</span>
+		    					<span class="date">June 2023 - February 2024</span>
 		    					<h2>INFORMATION TECHNOLOGY DEVELOPER (CONTRACT)</h2>
 		    					<span class="position">PT. BANGUN SUEMERU SEJAHTERA / PT. BARU SUEMERU SEJATI (SUEMERU GRUP)</span><br>
 		    					<span>Analyze and design systems as needed</span><br>
@@ -957,7 +957,7 @@
           <div class="col-md-12 text-center">
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy; 2023 - <script>document.write(new Date().getFullYear());</script> All rights reserved
+            Copyright &copy; 2023 - <script>document.write(new Date().getFullYear())</script> All rights reserved
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
