--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p class="text-justify">I'm Responsibility, Critical Thinking, Time Management, Team Management, Public Speaking, Leadership and Teamwork. Experience with Git version control. Knowledge of Coding Language (e.x Javascript, Typescript, PHP), Knowledge of Debbuging & Clean Code, Experience with Server Side Programming Language & MVC Framework (e.x PHP/Laravel) , Experience with Web Development (e.x Laravel, Livewire, React JS) and Web Design (e.x Bootstrap, TailwindCSS), Experience with Front End Web (e.x React JS or React TS).</p>
+		            <p class="text-justify">As a graduate from Major of Informatics Engineering from the Politeknik Pertanian Negeri Samarinda with a Software Engineering Technology (TRPL) Study Program, interested in developing dynamic websites application for users. Proficient in designing and building website applications with HTML, CSS, Javascript, PHP, MySQL skills. Experienced using PHP frameworks like Laravel and CSS frameworks such as Bootstrap and TailwindCSS, and has DevOps experience using cPanel when to production or release version.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Deuwi Satriya Irawan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>August 05, 1999</span></li>
@@ -945,7 +945,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Jl. Pemuda 1 Rt. 13 No. 51, Sungai Pinang. Kota Samarinda, Kalimantan Timur. Indonesia.</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Dusun Kliwon Rt. 03 Rw. 01 Jl. Benda Desa Gunung Karung Kecamatan Luragung Kabupaten Kuningan Provinsi Jawa Barat. Indonesia. 45581.</span></li>
 	                <li><a href="https://wa.me/082253332802"><span class="icon icon-phone"></span><span class="text">+62 822-5333-2802</span></a></li>
 	                <li><a href="mailto:satriai418@gmail.com"><span class="icon icon-envelope"></span><span class="text">satriai418@gmail.com</span></a></li>
 	              </ul>
