fix about and address

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>Jl. Pemuda 1 Rt. 13 No. 51, Sungai Pinang. Kota Samarinda, Kalimantan Timur. Indonesia.</p>
+		            <p>Dusun Kliwon Rt. 03 Rw. 01 Jl. Benda Desa Gunung Karung Kecamatan Luragung Kabupaten Kuningan Provinsi Jawa Barat. Indonesia. 45581.</p>
 		          </div>
 	          </div>
           </div>
@@ -908,7 +908,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I'm Responsibility, Critical Thinking, Time Management, Team Management, Public Speaking, Leadership and Teamwork. Experience with Git version control. Knowledge of Coding Language (e.x Javascript, Typescript, PHP), Knowledge of Debbuging & Clean Code, Experience with Server Side Programming Language & MVC Framework (e.x PHP/Laravel) , Experience with Web Development (e.x Laravel, Livewire, React JS) and Web Design (e.x Bootstrap, TailwindCSS), Experience with Front End Web (e.x React JS or React TS).</p>
+              <p>As a graduate from Major of Informatics Engineering from the Politeknik Pertanian Negeri Samarinda with a Software Engineering Technology (TRPL) Study Program, interested in developing dynamic websites application for users. Proficient in designing and building website applications with HTML, CSS, Javascript, PHP, MySQL skills. Experienced using PHP frameworks like Laravel and CSS frameworks such as Bootstrap and TailwindCSS, and has DevOps experience using cPanel when to production or release version.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/satriai418/" target="__blank"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://github.com/satriairawan05" target="__blank"><span class="icon-github"></span></a></li>
