Update Name from Waiter to Crew Store

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">March 2023 - April 2023</span>
-		    					<h2>WAITER (PART TIME)</h2>
+		    					<h2>CREW STORE (PART TIME)</h2>
 		    					<span class="position">BEBEK GORENG H. SLAMET ( ASLI )</span><br>
 		    					<span>Prepare preparation to open a restaurant</span><br>
                                 <span>Serving Customers in accordance with existing Standard Operational Procedures</span><br>
