add phone number to footer

--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
 		            <p><a href="https://wa.me/082253332802" target="__blank">+62 822-5333-2802</a></p>
-		            <p><a href="https://wa.me/082258927032" target="__blank">+62 822-5892-7032</a></p>
+		            <!-- <p><a href="https://wa.me/082258927032" target="__blank">+62 822-5892-7032</a></p> -->
 	            </div>
 	          </div>
           </div>
@@ -948,6 +948,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Dusun Kliwon Rt. 03 Rw. 01 Jl. Benda Desa Gunung Karung Kecamatan Luragung Kabupaten Kuningan Provinsi Jawa Barat. Indonesia. 45581.</span></li>
 	                <li><a href="https://wa.me/082253332802"><span class="icon icon-phone"></span><span class="text">+62 822-5333-2802</span></a></li>
+	                <li><a href="https://wa.me/082258927032"><span class="icon icon-phone"></span><span class="text">+62 822-5892-7032</span></a></li>
 	                <li><a href="mailto:satriai418@gmail.com"><span class="icon icon-envelope"></span><span class="text">satriai418@gmail.com</span></a></li>
 	              </ul>
 	            </div>
